seems to be working properly

--- a/views/account/importer.pug
+++ b/views/account/importer.pug
@@ -98,7 +98,7 @@ block content
 
                   // TODO: setInterval here checking the backend
 
-                  window.open('/user/v/' + uniqueTag.uniqueTag)
+                  window.open('/user/v/' + uniqueTag.uniqueTag + '?autoplay=off')
 
                 },
                 error: function (err) {
