tbr is really unaccurate so im cranking it up

--- a/views/account/importer.pug
+++ b/views/account/importer.pug
@@ -104,6 +104,8 @@ block content
 
                   if(uniqueTag !== 'playlist'){
                     window.open('/user/v/' + uniqueTag.uniqueTag + '?autoplay=off')
+                  } else {
+                    swal('Sorry playlists arent supported at the moment')
                   }
 
 
