add importer to user section

--- a/views/account/importer.pug
+++ b/views/account/importer.pug
@@ -79,6 +79,18 @@ block content
           // no need to autofocus
           $('.importInput').focus();
 
+            // TODO: can use this to capture the enter button for the importer
+            //$(".search-query-input").on('keyup', function (e) {
+            //if (e.key === 'Enter' || e.keyCode === 13) {
+            //  var userSearchQuery = $('.search-query-input').val()
+            //
+            //  window.location = '/search?orderBy=' + orderBy + '&mediaType=' + mediaType + '&searchQuery=' + userSearchQuery + '&searchType=' + searchType
+            //  // Do something
+            //}
+            //});
+
+
+
           $('.submit-button').click(function () {
 
             $('.importerButton').hide();
