--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -489,6 +489,8 @@ if !user
 
     })
 
+// hide the header when you scroll down
+// first I have to make it fixed to the top
 script.
   $(document).ready(function () {
     // grab an element
