--- a/views/mediaPlayerPartials/progressTrackerJs.pug
+++ b/views/mediaPlayerPartials/progressTrackerJs.pug
@@ -24,6 +24,7 @@ script.
 
         estimatedProcessingSecondsLeft = Number(data.conversionTimeLeft);
 
+        // TODO: move this to the backend
         setIntervalX(() => {
           if (estimatedProcessingSecondsLeft) estimatedProcessingSecondsLeft -= 1
           var secondsToFormattedTime = #{secondsToFormattedTime};
@@ -42,8 +43,11 @@ script.
 
         }, 1000 * 1, intervalSeconds)
 
+
+        // TODO: only use this one, conversionProgress
+
         // Shows undefined when at 100%
-        $('#processing').text(`Your upload is currently ${data.conversionProgress !== undefined ? data.conversionProgress : 100}% done being processed`);
+        $('#processing').text(`${data.uploadProgress !== undefined ? data.uploadProgress : 'Completed'}`);
 
         if(parseInt(data) == 100){
           location.reload();
