convert srt to webvtt

--- a/views/account/editUpload.pug
+++ b/views/account/editUpload.pug
@@ -116,14 +116,15 @@ block content
                             // TODO: check this size
                             input.center-block.text-center.upload-thumbnail-input(class="upload-file" data-max-size="500000000" type="file" id="filetoupload" name="filetoupload" accept="image/*")
 
+                        // input for captions
                         label.col-sm-3.control-label(for='webvtt' style="") Captions
                         .col-sm-7
                             // TODO: check this size
                             // TODO: check how to do accept with srt and vtt
-                            input.center-block.text-center.upload-thumbnail-input(class="upload-file" data-max-size="500000000" type="file" id="webvtt" name="webvtt" accept=".vtt")
+                            //input.center-block.text-center.upload-thumbnail-input(class="upload-file" data-max-size="500000000" type="file" id="webvtt" name="webvtt" accept=".vtt")
 
                             // allow srt and webvtt
-                            //input.center-block.text-center.upload-thumbnail-input(class="upload-file" data-max-size="500000000" type="file" id="webvtt" name="webvtt" accept=".vtt,.srt")
+                            input.center-block.text-center.upload-thumbnail-input(class="upload-file" data-max-size="500000000" type="file" id="webvtt" name="webvtt" accept=".vtt,.srt")
 
                     div.form-group
                         div.col-sm-3.
