--- a/views/mediaPlayerPartials/creditFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/creditFunctionalityJs.pug
@@ -55,7 +55,7 @@ if user
 
         var handler = StripeCheckout.configure({
           key: stripeToken,
-          image: 'https://f001.backblazeb2.com/file/pewtube/pewtube/RCbutDM.jpg',
+          image: '',
           locale: 'auto',
           // bitcoin: true,
           token: function (token) {
