--- a/views/account/importer.pug
+++ b/views/account/importer.pug
@@ -66,8 +66,10 @@ block content
                     input.importInput.form-group.center-block.text-center(style="width:400px;max-width:95%;border-radius:2px;font-size:20px;font-weight:300;" type="text" name="title" id="title" minlength=3, maxlength=100 required)
                     button.fw.btn.btn-primary.submit-button(style="border-radius:5px;font-size:18px;" type="submit") Import
 
-                h1.importingText(style="display:none;").
-                    Importing, will redirect you in a second
+                div.importingText(style="display:none;")
+                    h1.
+                        Importing, will redirect you in a second....
+                    img(src="/images/uploading.gif" style="height:94px;margin-top:22px;")
 
 
 
